change: added skill category deployment change: contact and project links are now opens in new tab change: added whatsapp link change: hidden scrollbar fix: scroll on resume page fix: scroll page design

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -31,14 +31,18 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
+::-webkit-scrollbar { 
+    display: none; 
+}
+
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
 section {
     /* padding: 60px 0; */
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: linear-gradient(rgba(255, 248, 248, 0.8), rgba(255, 248, 248, 0.8)), url("../img/main-page-bg-1920-1080.jpg") top center;
     background-size: cover;
 }
